# llm-tutorial-rs

./: .gitignore  Cargo.toml  README.md
examples/: 01_train_tokenizer.rs  02_tensor_operations.rs  03_model_architecture.rs  04_training_infrastructure.rs
src/: lib.rs  model.rs  tensor.rs  tokenizer.rs  train.rs  training_logger.rs
