[package]
name = "llm-tutorial"
version = "0.1.0"
edition = "2024"

[lib]
# doctest = false

[dependencies]
anyhow = "1.0.100"
fs-err = "3.2.2"
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
anyhow = "1.0.100"
